# thesis-sk-machine

./: .sk-dsl.autosave.xopp  .understanding-binary-tree.autosave.xopp  SKeleton.wasm  SKeleton.wat  array.wat  handwritten-SK-tests.txt  min.html  min.js  minimal.wasm  minimal.wat  ogSKeleton.wat  recursion.wat  sk-dsl.xopp  sk.wasm  sk.wat  test.wasm  test.wat  to-do.txt  trap.coredump  understanding-binary-tree.xopp
skidaddle/: CHANGELOG.md  LICENSE  skidaddle.cabal
skidaddle/src/: Choreograph.hs  Identifiers.hs  MyLib.hs  ReductionRules.hs  TypedWAT.hs  WAT.hs
