cabal-version:      3.0
name:               skidaddle
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Apoorva Anand
maintainer:         apoorvaanand.work@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    other-modules:
        WAT,
        Choreograph
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite skidaddle-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        skidaddle
